# organization_service

./: .env.template  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
config/: local.config.template.toml  production.config.template.toml
src/: pyproject.toml
src/infrastructure/: config_loader.py
src/infrastructure/db/: __init__.py  config.py
src/infrastructure/db/functions/generate_uuid7/: create.sql  delete.sql
src/infrastructure/db/migrations/: env.py
src/infrastructure/db/migrations/versions/: 20230407-200045_73b1aef2f7d3_uuid_generation_function.py  20230410-185746_4d0d79eadbda_add_initial_models.py  20230410-201447_cce7a0f9c653_add_circular_foreign_keys.py  20230410-213714_2eb235282fa9_add_initial_models.py
src/infrastructure/db/models/: __init__.py  base.py  organization.py  post.py  role.py  user.py
