[tool.poetry]
name = "organization-service"
version = "0.1.0"
description = ""
authors = ["banchinche <andrew.hrimov@gmail.com>"]
readme = "README.md"
packages = [{include = "organization_service"}]

[tool.poetry.dependencies]
python = "~3.10"
fastapi = "^0.95.0"
SQLAlchemy = "^2.0.8"
asyncpg = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-asyncio = "^0.21.0"
flake8 = "^6.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
